Refactor code to use new Skill/Category models
Editing profile now a separate page from settings

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -316,7 +316,7 @@ textarea {
 
 // Account page
 
-.account-page {
+.account-page, .edit-profile-page {
   width: 75%;
   margin: 0 auto;
 }
@@ -326,7 +326,7 @@ input.activity-checkbox {
 }
 
 .user-activities {
-  padding-left: 15px;
+  padding-left: 0px;
 }
 
 .btn-social {
@@ -413,7 +413,7 @@ input.activity-checkbox {
   }
 
 
-  button {
+  .btn-primary {
     width: 100%;
     margin-top: 10px;
     text-transform: uppercase;
