--- a/views/users/showall.jade
+++ b/views/users/showall.jade
@@ -15,7 +15,7 @@ block content
       label Categories
       .skill-select
         each skill in user._interests
-          .skill-label(name="#{skill._id}") #{skill.label.toObject()[locale]}
+          .skill-label(name="#{skill._id}") #{skill.label[locale]}
     .col-md-6.range-filter
       label#distance-label Distance
       input#distance-slider(data-slider-id='distance-slider' type="text")
