--- a/views/account/newaccount.jade
+++ b/views/account/newaccount.jade
@@ -24,10 +24,10 @@ block content
             .question= "Select some skills you have that you'd like to share!"
             .activity-group
               each category in categories
-                .activity-title= category['label'].toObject()[locale]
+                .activity-title= category['label'][locale]
                 .activities
                   each action, i in category._skills
-                    .activity(name="#{action._id}")= action['label'].toObject()[locale]
+                    .activity(name="#{action._id}")= action['label'][locale]
             .navigation
               a.nav-link.progress-link(href="#item3") Next
       .item#item3
@@ -38,10 +38,10 @@ block content
             .question= "Select some services you'd be interested in receiving"
             .activity-group
               each category in categories
-                .activity-title= category['label'].toObject()[locale]
+                .activity-title= category['label'][locale]
                 .activities
                   each action, i in category._skills
-                    .activity(name="#{action._id}")= action['label'].toObject()[locale]
+                    .activity(name="#{action._id}")= action['label'][locale]
             .navigation
               a#finished.progress-link(href="#item1") Finished
 
