--- a/views/partials/userCard.jade
+++ b/views/partials/userCard.jade
@@ -1,7 +1,7 @@
 .grid-item.user-card
   - var image_uri = card_user.profile.picture || '/images/person_placeholder.gif'
-  - var bookmark_uri = curr_user.bookmarks.indexOf(card_user._id) >= 0 ? 'bookmark_active.svg' : 'bookmark_inactive.svg'
-  img.bookmark(src='/images/#{bookmark_uri}', data-user-id=card_user.id)
+  - var bookmark_uri = curr_user.bookmarks.map((x) => x.toString()).indexOf(card_user._id.toString()) >= 0 ? 'bookmark_active.svg' : 'bookmark_inactive.svg'
+  img.bookmark(src='/images/#{bookmark_uri}', data-user-id="#{card_user._id}")
   .profile-info
     .profile-pic(onclick='window.location = "/profile/#{card_user.id}"' class="#{card_user.match}" style="background-image:url('#{image_uri}')", data-toggle="popover" data-trigger="hover" title="#{card_user.profile.name}")
     .name-location
@@ -11,7 +11,7 @@
     hr.separator
     .skill-icons
       each skill in card_user._skills.slice(0, 5)
-        .skill-label #{skill.label.toObject()[locale]}
+        .skill-label(class="#{skill.skill_score > 0 ? 'highlight': ''}") #{skill.label[locale]}
 
   if card_user.aboutMe
     .about-me
