--- a/views/account/settings.jade
+++ b/views/account/settings.jade
@@ -2,7 +2,7 @@ extends ../layout
 include ../partials/activities
 
 block content
-  .account-page
+  .account-page.content-page
     .page-header
       h3 Change Password
 
