--- a/views/users/edit.jade
+++ b/views/users/edit.jade
@@ -2,7 +2,7 @@ extends ../layout
 include ../partials/activities
 
 block content
-  .edit-profile-page
+  .edit-profile-page.content-page
     .page-header
       h3 Edit your profile
 
