--- a/views/users/transactions.jade
+++ b/views/users/transactions.jade
@@ -46,7 +46,7 @@ block content
   include ../partials/review
   input#csrf_token(type='hidden', name='_csrf', value=_csrf)
   
-  .transaction-page
+  .transaction-page.content-page
     .row.options
       .col-xs-4.exchange-type.selected Proposed
       .col-xs-4.exchange-type Upcoming
