--- a/views/account/signup.jade
+++ b/views/account/signup.jade
@@ -1,42 +1,43 @@
 extends ../layout
 
 block content
-  .page-header
-    h3 Sign up
-  .container
-    .row
-      .col-md-8
-        form.form-horizontal(id='signup-form', method='POST')
-          input(type='hidden', name='_csrf', value=_csrf)
-          .form-group
-            label.col-sm-3.control-label(for='first_name') First Name
-            .col-sm-7
-              input.form-control(type='text', name='first_name', id='first_name', placeholder='John', autofocus)
-          .form-group
-            label.col-sm-3.control-label(for='last_name') Last Name
-            .col-sm-7
-              input.form-control(type='text', name='last_name', id='last_name', placeholder='Doe', autofocus)
-          .form-group
-            label.col-sm-3.control-label(for='email') Email
-            .col-sm-7
-              input.form-control(type='email', name='email', id='email', placeholder='Email', autofocus)
-          .form-group
-            label.col-sm-3.control-label(for='password') Password
-            .col-sm-7
-              input.form-control(type='password', name='password', id='password', placeholder='Password')
-          .form-group
-            label.col-sm-3.control-label(for='confirmPassword') Confirm Password
-            .col-sm-7
-              input.form-control(type='password', name='confirmPassword', id='confirmPassword', placeholder='Confirm Password')
-          .form-group
-            .col-sm-offset-3.col-sm-7
-              button.btn.btn-success(type='submit')
-                i.fa.fa-user-plus
-                | Signup
-      .col-md-4
-        a.btn.btn-block.btn-facebook.btn-social(href='/auth/facebook')
-          i.fa.fa-facebook
-          | Sign in with Facebook
-        a.btn.btn-block.btn-google.btn-social(href='/auth/google')
-          i.fa.fa-google-plus
-          | Sign in with Google
+  .content-page
+    .page-header
+      h3 Sign up
+    .container
+      .row
+        .col-md-8
+          form.form-horizontal(id='signup-form', method='POST')
+            input(type='hidden', name='_csrf', value=_csrf)
+            .form-group
+              label.col-sm-3.control-label(for='first_name') First Name
+              .col-sm-7
+                input.form-control(type='text', name='first_name', id='first_name', placeholder='John', autofocus)
+            .form-group
+              label.col-sm-3.control-label(for='last_name') Last Name
+              .col-sm-7
+                input.form-control(type='text', name='last_name', id='last_name', placeholder='Doe', autofocus)
+            .form-group
+              label.col-sm-3.control-label(for='email') Email
+              .col-sm-7
+                input.form-control(type='email', name='email', id='email', placeholder='Email', autofocus)
+            .form-group
+              label.col-sm-3.control-label(for='password') Password
+              .col-sm-7
+                input.form-control(type='password', name='password', id='password', placeholder='Password')
+            .form-group
+              label.col-sm-3.control-label(for='confirmPassword') Confirm Password
+              .col-sm-7
+                input.form-control(type='password', name='confirmPassword', id='confirmPassword', placeholder='Confirm Password')
+            .form-group
+              .col-sm-offset-3.col-sm-7
+                button.btn.btn-success(type='submit')
+                  i.fa.fa-user-plus
+                  | Signup
+        .col-md-4
+          a.btn.btn-block.btn-facebook.btn-social(href='/auth/facebook')
+            i.fa.fa-facebook
+            | Sign in with Facebook
+          a.btn.btn-block.btn-google.btn-social(href='/auth/google')
+            i.fa.fa-google-plus
+            | Sign in with Google
