--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -3,7 +3,7 @@
     a.navbar-brand(href='/')
       img(width=20 src='/images/logo.png')
       span.brand-title Bazaar
-    input.search-box#skill-name-input(placeholder="Search for skills...")
+    select.search-box(multiple="multiple" style="width:50%")
     span.glyphicon.glyphicon-search.white
     button.navbar-toggle(id='menu-toggle' type='button')
       span.sr-only Toggle navigation
