--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,6 +27,7 @@ html
     script(src='/js/lib/masonry.pkgd.min.js')
     script(src='/js/lib/ckeditor/ckeditor.js')
     script(src='/js/lib/bootstrap-slider.min.js')
+    script(src='/js/lib/select2.full.min.js')
     script(src='/js/main.js')
     script(src="https://cdn.socket.io/socket.io-1.2.0.js")
 
