Change styling of modal titles

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -312,6 +312,12 @@ textarea {
   }
 }
 
+.modal-title {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
 .modal-footer {
   text-align: center;
 }
