Change copy on request modal

--- a/views/partials/newrequest.jade
+++ b/views/partials/newrequest.jade
@@ -8,8 +8,8 @@
       .modal-body
         .container-fluid
           .row
-            .col-xs-4.service-type(name=RequestType.LEARN) Learn
-            .col-xs-4.service-type(name=RequestType.SHARE) Share
+            .col-xs-4.service-type(name=RequestType.LEARN) Receive
+            .col-xs-4.service-type(name=RequestType.SHARE) Give
             .col-xs-4.service-type(name=RequestType.EXCHANGE) Exchange
         form.profile-request-form
           #request-recipient(style="display:none;" recipient)
