Use _id since results coming from an aggregate

--- a/views/partials/userCard.jade
+++ b/views/partials/userCard.jade
@@ -19,4 +19,4 @@
     .about-me-note=card_user.aboutMe
 
 
-  button.btn.btn-success.action-calls(data-toggle="modal", data-target="#requestModal", data-name="#{card_user.profile.name}" data-id="#{card_user.id}" data-skills=card_user._skills) Request
+  button.btn.btn-success.action-calls(data-toggle="modal", data-target="#requestModal", data-name="#{card_user.profile.name}" data-id="#{card_user._id}" data-skills=card_user._skills) Request
