--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,7 @@ html
     include partials/footer
 
     script(src='/js/lib/jquery-2.2.0.min.js')
+    script(src='/js/lib/moment.min.js')
     script(src='/js/lib/bootstrap.min.js')
     script(src='/js/lib/jquery-ui.min.js')
     script(src='/js/lib/jquery-scroll-to.js')
@@ -27,6 +28,7 @@ html
     script(src='/js/lib/masonry.pkgd.min.js')
     script(src='/js/lib/ckeditor/ckeditor.js')
     script(src='/js/lib/bootstrap-slider.min.js')
+    script(src='/js/lib/bootstrap-datetimepicker.js')
     script(src='/js/lib/select2.full.min.js')
     script(src='/js/main.js')
     script(src="https://cdn.socket.io/socket.io-1.2.0.js")
